--- a/ingles.css
+++ b/ingles.css
@@ -42,17 +42,14 @@ body{
 
 a{
     text-decoration: none;
-    color: rgb(255, 208, 154);
+    color: rgb(255 240 123);
 }
 
 .item {
-  color: #fff !important;
-  font-size: 20px;
-  font-weight: 500;
-  padding: 0.5em 1.2em;
-  background: #318aac;
+  background: rgb(9, 67, 94);
   border: 2px solid;
-  border-color: #318aac;
+  border-radius: 10px;
+  border-color: rgb(9, 67, 94);
   position: relative;
 }
 .item:before {
@@ -64,19 +61,17 @@ a{
   height: 100%;
   background: rgba(255, 255, 255, 0.1);
   transition: all 1s ease;
+  border-radius: 10px;
 }
 .item:hover:before {
 width: 100%;
 }
 
 .item1 {
-  color: #fff !important;
-  font-size: 20px;
-  font-weight: 500;
-  padding: 0.5em 1.2em;
-  background: #318aac;
+  background: rgb(9, 67, 94);
   border: 2px solid;
-  border-color: #318aac;
+  border-radius: 10px;
+  border-color:rgb(9, 67, 94);
   position: relative;
 }
 .item1:before {
@@ -88,19 +83,17 @@ width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.1);
   transition: all 1s ease;
+  border-radius: 10px;
 }
 .item1:hover:before {
 width: 100%;
 }
 
 .item2 {
-  color: #fff !important;
-  font-size: 20px;
-  font-weight: 500;
-  padding: 0.5em 1.2em;
-  background: #318aac;
+  background: rgb(9, 67, 94);
   border: 2px solid;
-  border-color: #318aac;
+  border-radius: 10px;
+  border-color: rgb(9, 67, 94);
   position: relative;
 }
 .item2:before {
@@ -112,6 +105,7 @@ width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.1);
   transition: all 1s ease;
+  border-radius: 10px;
 }
 .item2:hover:before {
 width: 100%;
