--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,28 @@
     font-size: 30px;
     margin: 1em 3em 1em 1em;
  }
+ .hover {
+    background: rgb(9, 67, 94);
 
+    border-radius: 4px;
+    border-color: rgb(9, 67, 94);
+    position: relative;
+  }
+.hover:before {
+    content:"";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 0px;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.1);
+    transition: all 0.5s ease;
+    border-radius: 4px;
+}
+.hover:hover:before {
+  width: 100%;
+}
+ 
 .body{
     background-color: rgb(0, 0, 29);
 }
@@ -70,6 +91,10 @@
     color: rgb(2, 25, 36);
 }
 
+a{
+    color: black;
+}
+
 .row{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -87,7 +112,11 @@
     align-items: center;
     justify-content: center;
 }
-
+footer{
+    margin-top: 40px;
+    display: flex;
+    justify-content: right;
+}
 .diosito{
     background-color: rgb(2, 25, 36);
     color:rgb(255, 225, 89);
@@ -105,6 +134,7 @@
     width: 12%;
     text-align: center;
     padding-bottom: 5px;
+
 }
 
 
